--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dotlottie/player-component": "^2.7.12",
+    "@lottiefiles/dotlottie-react": "^0.12.3",
     "@tailwindcss/vite": "^4.0.0",
     "gsap": "^3.12.7",
     "react": "^18.3.1",
